--- a/css/main.css
+++ b/css/main.css
@@ -62,3 +62,9 @@ body {
     transform: rotate: 350deg;
       transform-origin: center;
   }
+  100%{
+    width;: 100%;
+    transform: rotate: 0deg;
+      transform-origin: center;
+  }
+}
