--- a/css/main.css
+++ b/css/main.css
@@ -50,9 +50,9 @@ body {
   position: absolute;
   top: 0;
   width: 30px;
-
+  transform-origin: center center;
+  animation: twinkle 3s infinite alternate;
   background: url("../images/star.svg") no-repeat center center / contain transparent;
-  transition: all 2s ease;
 }
 
 @keyframes growstars {
@@ -62,6 +62,7 @@ body {
     transform: rotate: 350deg;
       transform-origin: center;
   }
+
   100%{
     width;: 100%;
     transform: rotate: 0deg;
