--- a/css/main.css
+++ b/css/main.css
@@ -55,17 +55,15 @@ body {
   background: url("../images/star.svg") no-repeat center center / contain transparent;
 }
 
-@keyframes growstars {
+@keyframes twinkle {
 
   0% {
-    width: 0;
-    transform: rotate: 350deg;
-      transform-origin: center;
+    width: 30px;
+    height: 30px;
   }
 
-  100%{
-    width;: 100%;
-    transform: rotate: 0deg;
-      transform-origin: center;
+  100% {
+    width: 50px;
+    height: 50px;
   }
 }
